Add testing data

--- a/src/index.html
+++ b/src/index.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/main.scss" />
-    <title>VR DIVER</title>
-  </head>
-  <body>
-    <header class="header">
-      <div class="header__logo">
-        <img src="./img/logo-mob.png" srcset="./img/logo-mob.png?width=42, ./img/logo-desktop.png 1366w" alt="logo">
-      </div>
 
-      <div class="header__slogan">
-        <h5>VR DIVER club</h5>
-        <h6>ваш гід у світ віртуальної реальності</h6>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./styles/main.scss" />
+  <title>VR DIVER</title>
+</head>
 
-      <button type="button" class="header__btn">
-        <span></span><span></span><span></span>
-      </button>
-    </header>
+<body>
+  <header class="header">
+    <div class="header__logo">
+      <img src="./img/logo-mob.png" srcset="./img/logo-mob.png?width=42, ./img/logo-desktop.png 1366w" alt="logo">
+    </div>
 
-    <main>
+    <div class="header__slogan">
+      <h5>VR DIVER club</h5>
+      <h6>ваш гід у світ віртуальної реальності</h6>
+    </div>
+
+    <button type="button" class="header__btn">
+      <span></span><span></span><span></span>
+    </button>
+  </header>
+
+  <main>
+    <section class="hero">
       <h1>VR Diver Наші події</h1>
-      <p>Обирайте спортивні ігри, файтинги, стрілялки, виживалки, хорори чи квести - все це можна знайти і спробувати у нашому закладі.</p>
-      <button type="button">Забронювати</button>
-    </main>
+      <p>Обирайте спортивні ігри, файтинги, стрілялки, виживалки, хорори чи квести - все це можна знайти і спробувати у
+        нашому закладі.</p>
+      <button type="button" class="btn">Забронювати</button>
+    </section>
 
-    <!-- <script type="module" src="./index.js"></script> -->
-  </body>
+  </main>
+
+  <!-- <script type="module" src="./index.js"></script> -->
+</body>
+
 </html>
