--- a/src/index.html
+++ b/src/index.html
@@ -20,17 +20,21 @@
       <h6>ваш гід у світ віртуальної реальності</h6>
     </div>
 
-    <button type="button" class="header__btn">
+    <!-- <button type="button" class="header__btn">
       <span></span><span></span><span></span>
-    </button>
+    </button> -->
   </header>
 
   <main>
     <section class="hero">
-      <h1>VR Diver Наші події</h1>
-      <p>Обирайте спортивні ігри, файтинги, стрілялки, виживалки, хорори чи квести - все це можна знайти і спробувати у
-        нашому закладі.</p>
-      <button type="button" class="btn">Забронювати</button>
+      <a class="btn btn--link" href="https://m.me/VRDiver?ref=w18128353"><img src="./img/icon-facebook-messenger.png" alt="tel"><span>День народження</span></a>
+      <a class="btn btn--link" href="https://instagram.com/vrdiverclub"><img src="./img/icon-instagram.png" alt="insta"><span>Instagram</span></a>
+      <a class="btn btn--link" href="https://facebook.com/VRDiver/"><img src="./img/icon-facebook.png" alt="face"><span>Facebook</span></a>
+      <a class="btn btn--link" href="https://t.me/vrdiver_dice"><img src="./img/icon-telegram.png" alt="telegram"><span>Telegram</span></a>
+      <a class="btn btn--link" href="https://tiktok.com/@vrdiver0"><img src="./img/icon-tiktok.png" alt="tiktok"><span>Tik-Tok</span></a>
+      <a class="btn btn--link" href="https://youtube.com/@vrdiverclub"><img src="./img/icon-youtube.png" alt="youtube"><span>Youtube</span></a>
+      <a class="btn btn--link" href="https://instagram.com/vr_diver_dice/"><img src="./img/icon-game-board.png" alt="game"><span>Настолки</span></a>
+      <a class="btn btn--link" href="tel:+38098 281 60 05"><img src="./img/icon-telephone.png" alt="tel"><span>098 281 60 05</span></a>
     </section>
 
   </main>
