--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./styles/main.scss" />
   <title>VR DIVER</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -27,14 +34,22 @@
 
   <main>
     <section class="hero">
-      <a class="btn btn--link" href="https://m.me/VRDiver?ref=w18128353"><img src="./img/icon-facebook-messenger.png" alt="tel"><span>День народження</span></a>
-      <a class="btn btn--link" href="https://instagram.com/vrdiverclub"><img src="./img/icon-instagram.png" alt="insta"><span>Instagram</span></a>
-      <a class="btn btn--link" href="https://facebook.com/VRDiver/"><img src="./img/icon-facebook.png" alt="face"><span>Facebook</span></a>
-      <a class="btn btn--link" href="https://t.me/vrdiver_dice"><img src="./img/icon-telegram.png" alt="telegram"><span>Telegram</span></a>
-      <a class="btn btn--link" href="https://tiktok.com/@vrdiver0"><img src="./img/icon-tiktok.png" alt="tiktok"><span>Tik-Tok</span></a>
-      <a class="btn btn--link" href="https://youtube.com/@vrdiverclub"><img src="./img/icon-youtube.png" alt="youtube"><span>Youtube</span></a>
-      <a class="btn btn--link" href="https://instagram.com/vr_diver_dice/"><img src="./img/icon-game-board.png" alt="game"><span>Настолки</span></a>
-      <a class="btn btn--link" href="tel:+38098 281 60 05"><img src="./img/icon-telephone.png" alt="tel"><span>098 281 60 05</span></a>
+      <a class="btn btn--link" href="https://m.me/VRDiver?ref=w18128353"><img src="./img/icon-facebook-messenger.png"
+          alt="tel"><span>День народження</span></a>
+      <a class="btn btn--link" href="https://instagram.com/vrdiverclub"><img src="./img/icon-instagram.png"
+          alt="insta"><span>Instagram</span></a>
+      <a class="btn btn--link" href="https://facebook.com/VRDiver/"><img src="./img/icon-facebook.png"
+          alt="face"><span>Facebook</span></a>
+      <a class="btn btn--link" href="https://t.me/vrdiver_dice"><img src="./img/icon-telegram.png"
+          alt="telegram"><span>Telegram</span></a>
+      <a class="btn btn--link" href="https://tiktok.com/@vrdiver0"><img src="./img/icon-tiktok.png"
+          alt="tiktok"><span>Tik-Tok</span></a>
+      <a class="btn btn--link" href="https://youtube.com/@vrdiverclub"><img src="./img/icon-youtube.png"
+          alt="youtube"><span>Youtube</span></a>
+      <a class="btn btn--link" href="https://instagram.com/vr_diver_dice/"><img src="./img/icon-game-board.png"
+          alt="game"><span>Настолки</span></a>
+      <a class="btn btn--link" href="tel:+38098 281 60 05"><img src="./img/icon-telephone.png" alt="tel"><span>098 281
+          60 05</span></a>
     </section>
 
   </main>
